# dashboard-server

./: Cargo.toml  Dockerfile  README.md  deploy.sh  docker-compose.yml
src/: auth.rs  handlers.rs  main.rs  state.rs  templates.rs  utils.rs
src/handlers/: authentification.rs  download.rs  mod.rs  system.rs
static/: dashboard.js  style.css
templates/: index.html
