[package]
name = "dashboard-server"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
axum = "0.8.7"
lazy_static = "1.5.0"
serde = { version = "1.0.228", features = ["derive"] }
sysinfo = "0.36.1"
tokio = {version = "1.48.0", features = ["full"]}
tower-http = { version = "0.5", features = ["fs"] }
